solo/solo-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: solo
  labels:
    name: solo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: solo-apps
    spec:
      imagePullSecrets:
      - name: harborkey
      containers:
      - name: solo-app
        image: harbor.gdphdc.com/library/solo:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: solo-data
          mountPath: /opt/b3log/backup/
        resources:
          limits:
            cpu: 400m
            memory: 2048Mi
          requests:
            cpu: 200m
            memory: 256Mi
      volumes:
      - name: solo-data
        persistentVolumeClaim:
          claimName: solo-data-pvc
