solo/solo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: solo-svc
spec:
  ports:
    - port: 80
      name: http
      targetPort: 8080
  selector:
    name: solo-apps
