solo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: solo
  namespace: solo
spec:
  tls:
  - hosts: 
    - solo.gdphdc.com
    secretName: solo-ingress-secret 
  rules:
  - host: solo.gdphdc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: solo-svc
          servicePort: 80
